# video_app

backend/: config.py  database.py  main.py  pyproject.toml
backend/api/: deps.py
backend/api/v1/endpoints/: auth.py  users.py
backend/crud/: __init__.py  comment.py  social.py  user.py  video.py
backend/models/: __init__.py  comment.py  follows.py  likes.py  user.py  video.py
backend/schemas/: __init__.py  comment.py  token.py  user.py  video.py
